Update index.html with explanation

--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-<h1>Hello!<h1>
-  <a href="example.html">Click to see an example</a>
+<HTML>
+<HEAD>
+<TITLE>CSP pages</TITLE>
+<BODY>
+  <H2>Hello!</H2>
+This is a site where you can see your own websites and your classmates' websites on the actual internet. You can use the links below to explore different webpages: 
+<a href="example.html">Ms. Zhang's web page</a>
+</BODY>
+</HTML>
+
