--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <TITLE>CSP pages</TITLE>
 <BODY>
   <H2>Hello!</H2>
-This is a site where you can see your own websites and your classmates' websites on the actual internet. You can use the links below to explore different webpages: 
+This is a site where you can see your own websites and your classmates' websites on the actual internet. 
+  <br>
+  <br>
+ Use the links below to explore different webpages:
+  <br>
 <a href="example.html">Ms. Zhang's web page</a>
 </BODY>
 </HTML>
