--- a/example.html
+++ b/example.html
@@ -1,5 +1,6 @@
 <HTML>
 <HEAD>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <TITLE>Ms. Zhang's web page</TITLE>
 </HEAD>
 <BODY BGCOLOR="f0ead6 " TEXT="MIDNIGHTBLUE">
