--- a/example.html
+++ b/example.html
@@ -38,5 +38,6 @@ Listen to a sound below:
 <br>
 <audio controls src="sound.mp3"></audio>
 <HR>
+  <A HREF="#top">Click here for the top of this page.</A>
 </BODY>
 </HTML>
