--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ This is a site where you can see your own websites and your classmates' websites
  Use the links below to explore different webpages:
   <br>
 <a href="example.html">Ms. Zhang's web page</a>
+<a href = "form.html" style = "color:red">Form example</a>
 </BODY>
 </HTML>
 
