add link to form.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@ This is a site where you can see your own websites and your classmates' websites
  Use the links below to explore different webpages:
   <br>
 <a href="example.html">Ms. Zhang's web page</a>
-<a href = "form.html" style = "color:red">Form example</a>
+<br>
+<a href = "form.html" style = "color:white">Form example</a>
 </BODY>
 </HTML>
 
