--- a/resetbutton.html
+++ b/resetbutton.html
@@ -3,10 +3,11 @@
 <TITLE>CSP pages</TITLE>
 </HEAD>
 <BODY>
+	<form>
 Please enter a problem:<BR>
 <INPUT TYPE="text" NAME="problem">
 Press this button to make it go away:<BR>
 <INPUT TYPE="reset" VALUE="Poof">
-
+</form>
 </BODY>
 </HTML>
