add javascript examples

--- a/form2.html
+++ b/form2.html
@@ -11,7 +11,7 @@ function showInput2() {
   document.getElementById("user_input2").value;
 }
   </script>
-<TITLE>Form example</TITLE>
+<TITLE>Form example 2</TITLE>
 </HEAD>
 <BODY>
 <center>
