--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@ This is a site where you can see your own websites and your classmates' websites
 <a href = "resetbutton.html" style = "color:white">RadioButton example</a>
 <a href = "submitbutton.html" style = "color:white">SubmitButton example</a>
 <a href = "form2.html" style = "color:white">Form 2 example</a>
+<a href = "alert1.html" style = "color:white">Alert example</a>
+<a href = "openwindow.html" style = "color:white">Open Window example</a>
+<a href = "opensite.html" style = "color:white">Open Site example</a>
+<a href = "changecolor.html" style = "color:white">Change Color example</a>
 </BODY>
 </HTML>
 
