--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@ This is a site where you can see your own websites and your classmates' websites
 <br>
 <br>
 <br>
-<a href = "form.html" style = "color:white">Form example</a>
-<a href = "dropdown.html" style = "color:white">Dropdown example</a>
-<a href = "textarea.html" style = "color:white">Textarea example</a>
-<a href = "textfield.html" style = "color:white">Textfield example</a>
-<a href = "password.html" style = "color:white">Password example</a>
-<a href = "checkbox1.html" style = "color:white">Checkbox1 example</a>
-<a href = "checkbox2.html" style = "color:white">Checkbox2 example</a>
-<a href = "radiobutton.html" style = "color:white">RadioButton example</a>
-<a href = "resetbutton.html" style = "color:white">RadioButton example</a>
-<a href = "submitbutton.html" style = "color:white">SubmitButton example</a>
-<a href = "form2.html" style = "color:white">Form 2 example</a>
-<a href = "alert1.html" style = "color:white">Alert example</a>
-<a href = "openwindow.html" style = "color:white">Open Window example</a>
-<a href = "opensite.html" style = "color:white">Open Site example</a>
-<a href = "changecolor.html" style = "color:white">Change Color example</a>
+<a href = "form.html" style = "color:white"></a>
+<a href = "dropdown.html" style = "color:white"></a>
+<a href = "textarea.html" style = "color:white"></a>
+<a href = "textfield.html" style = "color:white"></a>
+<a href = "password.html" style = "color:white"></a>
+<a href = "checkbox1.html" style = "color:white"></a>
+<a href = "checkbox2.html" style = "color:white"></a>
+<a href = "radiobutton.html" style = "color:white"></a>
+<a href = "resetbutton.html" style = "color:white"></a>
+<a href = "submitbutton.html" style = "color:white"></a>
+<a href = "form2.html" style = "color:white"></a>
+<a href = "alert1.html" style = "color:white"></a>
+<a href = "openwindow.html" style = "color:white"></a>
+<a href = "opensite.html" style = "color:white"></a>
+<a href = "changecolor.html" style = "color:white"></a>
 </BODY>
 </HTML>
 
