--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@ This is a site where you can see your own websites and your classmates' websites
   <br>
 <a href="example.html">Ms. Zhang's web page</a>
 <br>
+<a href="hrishikeshtindex.html">Hrishikesh Tendulkar's page</a>
+<a href = "DunderMifflinPaperCompanyWebsite.html"></a/>
 <br>
 <br>
 <br>
