--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ This is a site where you can see your own websites and your classmates' websites
 <a href="hrishikeshtindex.html">Hrishikesh Tendulkar's page</a>
 <a href = "DunderMifflinPaperCompanyWebsite.html"></a/>
 <br>
+<a href ="jayr.html">Jay Rana's page</a>
+<br>
 <br>
 <br>
 <br>
