--- a/jayr.html
+++ b/jayr.html
@@ -21,7 +21,7 @@
 							
 		<p>Here is a picture of my favorite food from the site "delish.com":<img src="https://hips.hearstapps.com/del.h-cdn.co/assets/17/24/1497458683-delish-one-pot-chicken-alfredo-1-1024.jpg">
 
-		<p>Here is a picture of my dog Rocky:<img src="C:\Users\jayra\OneDrive\Documents\Processing\sketches\MC_IMG\Rocky!.jpg">
+		<p>Here is a picture of my dog Rocky:<img src="Rocky.jpg">
 
 		<p>Here is some copyright-free music from "bensound.com":<embed src="bensound-buddy.mp3"></embed>
 
