--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@ This is a site where you can see your own websites and your classmates' websites
 <br>
 <a href ="jayr.html">Jay Rana's page</a>
 <br>
+<a href = "anon1.html">Anonymous classmate's page</a>
+<br>
 <br>
 <br>
 <br>
