--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@ This is a site where you can see your own websites and your classmates' websites
   <br>
 <a href="example.html">Ms. Zhang's web page</a>
 <br>
-<a href="hrishikeshtindex.html">Hrishikesh Tendulkar's page</a>
+<a href="hrishikeshtindex.html">Hrishikesh's page</a>
 <a href = "DunderMifflinPaperCompanyWebsite.html"></a/>
 <br>
-<a href ="jayr.html">Jay Rana's page</a>
+<a href ="jayr.html">Jay's page</a>
 <br>
 <a href = "anon1.html">Anonymous classmate's page</a>
 <br>
+<a href = "guilhermevt.html">Guilherme's page</a>
 <br>
 <br>
 <br>
