--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ This is a site where you can see your own websites and your classmates' websites
 <br>
 <a href = "guilhermevt.html">Guilherme's page</a>
 <br>
+<a href = "anon2.html">Anonymous classmate's page</a>
 <br>
 <br>
 <br>
