--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ This is a site where you can see your own websites and your classmates' websites
 <br>
 <a href = "anon2.html">Anonymous classmate's page</a>
 <br>
+<a href = "fenilg.html">Fenil's page</a>
 <br>
 <br>
 <br>
