--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ This is a site where you can see your own websites and your classmates' websites
 <br>
 <a href = "fenilg.html">Fenil's page</a>
 <br>
+<a href = "anon3.html">Anonymous classmate's page</a>
 <br>
 <br>
 <br>
