--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ This is a site where you can see your own websites and your classmates' websites
 <br>
 <a href = "anon3.html">Anonymous classmate's page</a>
 <br>
+<a href = "anon4.html">Anonymous classmate's page</a>
 <br>
 <br>
 <br>
