--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ This is a site where you can see your own websites and your classmates' websites
 <br>
 <a href = "anon4.html">Anonymous classmate's page</a>
 <br>
+<a href = "namanb.html">Naman's page</a>
 <br>
 <br>
 <a href = "form.html" style = "color:white"></a>
