--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ This is a site where you can see your own websites and your classmates' websites
 <br>
 <a href = "annac.html">Anna's page</a>
 <br>
+<a href = "anon5.html">Anonymous classmate's page</a>
 <a href = "form.html" style = "color:white"></a>
 <a href = "dropdown.html" style = "color:white"></a>
 <a href = "textarea.html" style = "color:white"></a>
