--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@ This is a site where you can see your own websites and your classmates' websites
 <a href = "annac.html">Anna's page</a>
 <br>
 <a href = "anon5.html">Anonymous classmate's page</a>
+<br>
+<a href = "ashrity.html">Ashrit's page</a>
+<br>
+<a href = "anon6.html">Anonymous classmate's page</a>
+<br>
+<a href = "amritc.html">Amrit's page</a>
+<br>
 <a href = "form.html" style = "color:white"></a>
 <a href = "dropdown.html" style = "color:white"></a>
 <a href = "textarea.html" style = "color:white"></a>
