--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ This is a site where you can see your own websites and your classmates' websites
 <br>
 <a href = "amritc.html">Amrit's page</a>
 <br>
+<a href = "https://rohan2002.github.io/basic-html/">Anonymous classmate's page</a>
 <a href = "form.html" style = "color:white"></a>
 <a href = "dropdown.html" style = "color:white"></a>
 <a href = "textarea.html" style = "color:white"></a>
