--- a/anon6.html
+++ b/anon6.html
@@ -29,7 +29,7 @@
 
 		<h1> A SUPER COOL IMAGE </h1>
 		This image was taken by the author, after which the author edited it using some online tools to make the background black.<br>
-		<img src="IMG_0368.PNG" height=576 width=413">
+		<img src="IMG_0368.png" height=576 width=413">
 		
 		<h1> A sound . . . </h1>
 		
