--- a/amritc.html
+++ b/amritc.html
@@ -35,9 +35,9 @@
 	<p>Oh and look at this picture<p>from
 	<A HREF="http://www.christianitydaily.com/articles/2069/20150210/study-reveals-man-made-pollution-existed-long-before-industrial-revolution.htm">
 	<font color="yellow">christianitydaily.com</font></A>
-	<img SRC="/Users/family/Documents/Amrit/Index/pollution.jpg">
+	<img SRC="pollution.jpg">
 	<p>Little did you guys know that your progress would cost my brothers and sisters their lives. 
-	<EMBED SRC="/Users/family/Documents/Amrit/Index/laughter.mp3"><p>I'm just kidding guys no need to be so serious!
+	<EMBED SRC="laughter.mp3"><p>I'm just kidding guys no need to be so serious!
 	<p><A HREF="https://www.zapsplat.com/page/13/?s=laughing&post_type=music&sound-effect-category-id"><font color="yellow">Zapsplat.com</font></A> 
 	 is where you can find more of my laughter from!<p>Oh my god would you look at that! That's the view I get everyday!<p>
 	yet I never seem to get tired of it<p>now try clicking on the image. 
