--- a/anon3.html
+++ b/anon3.html
@@ -31,7 +31,7 @@ At 18 years old I have not accomplished as much as many other students my age bu
 <A HREF="https://www.wikihow.com/Live">How To Life (something I need to read)</A> <P> <P>
 <A HREF="#top">Click here for the top of this page.</A> <P>
 
-<CENTER> <A HREF="https://www.ecosia.org/images?q=amazing+photography"><img SRC="animal-photographers-26.jpg" <BORDER = 0> > </A> </CENTER> <BR>
+<CENTER> <A HREF="https://www.ecosia.org/images?q=amazing+photography"><img SRC="animal-photographers-26.jpg" BORDER = 0>  </A> </CENTER> <BR>
 <CENTER> <FONT SIZE = 2> THIS IS AN IMAGE FROM BORDOMTHEORAPY.COM OFA MONKEY HOLDING A CAMERA. (click on the photo for a surprise!) </CENTER> 
 
 
