--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@ This is a site where you can see your own websites and your classmates' websites
 <a href = "amritc.html">Amrit's page</a>
 <br>
 <a href = "https://rohan2002.github.io/basic-html/">Anonymous classmate's page</a>
+<br>
+<a href = "voneshas.html">Vonesha's page</a>
+<br>
+<a href = "sanyan.html">Sanya's page</a>
 <a href = "form.html" style = "color:white"></a>
 <a href = "dropdown.html" style = "color:white"></a>
 <a href = "textarea.html" style = "color:white"></a>
