--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@ This is a site where you can see your own websites and your classmates' websites
 <a href = "voneshas.html">Vonesha's page</a>
 <br>
 <a href = "sanyan.html">Sanya's page</a>
+<br>
+<a href = "anishb.html">Anish's page</a>
+<br>
 <a href = "form.html" style = "color:white"></a>
 <a href = "dropdown.html" style = "color:white"></a>
 <a href = "textarea.html" style = "color:white"></a>
