--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@ This is a site where you can see your own websites and your classmates' websites
 <br>
 <a href = "anishb.html">Anish's page</a>
 <br>
+<a href = "anon7.html">Anonymous classmate's page</a>
+<br>
 <a href = "form.html" style = "color:white"></a>
 <a href = "dropdown.html" style = "color:white"></a>
 <a href = "textarea.html" style = "color:white"></a>
