--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@ This is a site where you can see your own websites and your classmates' websites
   <br>
 <a href="example.html">Ms. Zhang's web page</a>
 <br>
-<a href="hrishikeshtindex.html">Hrishikesh's page</a>
+<a href="hrishikesht.html">Hrishikesh's page Part 1</a>
 <a href = "DunderMifflinPaperCompanyWebsite.html"></a/>
+<br>
+<a href="hrishikesht2.html">Hrishikesh's page Part 2</a>
 <br>
 <a href ="jayr.html">Jay's page</a>
 <br>
